--- a/views/list_of_books.html
+++ b/views/list_of_books.html
@@ -25,7 +25,7 @@
 
         <div class="header-1">
 
-            <a href="#" class="logo"> <i class="fas fa-book"></i> All About Books </a>
+            <a href="./home.html" class="logo"> <i class="fas fa-book"></i> All About Books </a>
 
             <div class="icons">
                 <div id="search-btn" class="fas fa-search" style="display:none;"></div>
