--- a/views/home.html
+++ b/views/home.html
@@ -25,7 +25,7 @@
 
         <div class="header-1">
 
-            <a href="#" class="logo"> <i class="fas fa-book"></i> All About Books </a>
+            <a href="#" class="logo"> <i class="fas fa-book"></i> All About Books about </a>
 
             <div class="icons">
                 <div id="search-btn" class="fas fa-search" style="display:none;"></div>
